Fix text selection color in dark mode

--- a/source/css/dark.css.scss
+++ b/source/css/dark.css.scss
@@ -18,6 +18,10 @@ html.dark {
     color: $text;
   }
 
+  ::selection {
+      color: black;
+  }
+    
   a {
       color: $highlight;
   }
